Se crean una instancia para pasar a otro activity, se envia dos textos, se cambia de posicion el boton de "mostrart toas", se agrega el directorio de idiomas en igles y español

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,9 @@
 <resources>
     <string name="app_name">Tutorial01</string>
     <string name="saludo">Hello Manuel!</string>
-    <string name="user">Usuario</string>
-    <string name="key">Contraseña</string>
-    <string name="enviar">Enviar</string>
-    <string name="cambio">Ingresar Cambio</string>
-    <string name="mostrar">Mostrar Toast</string>
+    <string name="user">User</string>
+    <string name="key">Password</string>
+    <string name="enviar">Send</string>
+    <string name="cambio">Enter changes</string>
+    <string name="mostrar">Show Toast - Continue</string>
 </resources>
