Agregando Nueva instancia para pasar a otro activity, se manda dos textos (usuario y password), se agrega directorios de idioma español e ingles

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -5,5 +5,5 @@
     <string name="key">Contraseña</string>
     <string name="enviar">Enviar</string>
     <string name="cambio">Ingresar Cambio</string>
-    <string name="mostrar">Mostrar brindis - Continuar</string>
+    <string name="mostrar">Mostrar mensaje - Continuar</string>
 </resources>
