Trabajando con el sensor de proximidad, cambia el background del linearLayout de acuerdo a la variacion del sensor, se crea una lista en el segundo layout que muestra paices ingresados mediante un array

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="enviar">Send</string>
     <string name="cambio">Enter changes</string>
     <string name="mostrar">Show Toast - Continue</string>
+    <string name="sensor">Texto del sensor</string>
 </resources>
