Se agrega la referencia de "compile 'com.mobsandgeeks:android-saripaar:2.0.2'", se hace validacion en el correo de acceso, y la contraseña para permitir ir al siguiente layout

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">Tutorial01</string>
     <string name="saludo">Hello Manuel!</string>
-    <string name="user">User</string>
+    <string name="user">E-mail</string>
     <string name="key">Password</string>
     <string name="enviar">Send</string>
     <string name="cambio">Enter changes</string>
